--- a/demos/2.x/package.json
+++ b/demos/2.x/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "dev": "vue-cli-service serve",
-        "build": "vue-cli-service build",
+        "doBuild": "vue-cli-service build",
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
@@ -24,8 +24,8 @@
         "eslint": "6.8.0",
         "eslint-plugin-vue": "6.1.2",
         "vue-template-compiler": "2.6.11",
-        "sass-loader": "8.0.2",
-        "node-sass": "4.13.1"
+        "sass": "1.22.10",
+        "sass-loader": "7.2.0"
     },
     "eslintConfig": {
         "root": true,
